--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -16,14 +16,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-           - name: Generate Snake
+      - name: Generate Snake
         uses: Platane/snk@v3
         with:
           github_user_name: AllociousFranklin
           outputs: |
-            dist/github-contribution-grid-snake.svg?color_snake=blue&color_dots=#ebedf0,#c6e48b,#7bc96f,#239a3b,#196127
+            dist/github-contribution-grid-snake.svg?color_snake=#1f6feb
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark&color_snake=#1f6feb
-
 
       - name: Push to Output Branch
         uses: crazy-max/ghaction-github-pages@v4
